--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,13 @@ DN and an LDAP description isn't present.
 
 ** API and ABI modifications:
 gnutls_x509_policy_release: Exported
+gnutls_pubkey_set_key_usage: Exported
+gnutls_x509_privkey_import_rsa_raw2: Exported
+gnutls_pkcs11_token_get_flags: Exported
+gnutls_pubkey_get_pk_ecc_x962: Exported
+gnutls_pubkey_import_ecc_x962: Exported
+gnutls_rnd_refresh: Exported
+gnutls_x509_crl_get_raw_issuer_dn: Exported
 
 
 * Version 3.1.19 (released 2014-01-24)
