--- a/NEWS
+++ b/NEWS
@@ -74,6 +74,9 @@ gnutls_sec_param_to_symmetric_bits: Added
 gnutls_privkey_get_pk_ecc_raw: Added
 gnutls_privkey_get_pk_dsa_raw: Added
 gnutls_privkey_get_pk_rsa_raw: Added
+gnutls_privkey_import_ecc_raw: Added
+gnutls_privkey_import_dsa_raw: Added
+gnutls_privkey_import_rsa_raw: Added
 gnutls_digest_self_test: Added (conditionally)
 gnutls_mac_self_test: Added (conditionally)
 gnutls_pk_self_test: Added (conditionally)
