--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,9 @@ See the end for copying conditions.
 ** libgnutls: fixed null pointer derefence when printing a certificate
 DN and an LDAP description isn't present.
 
+** libgnutls: gnutls_db_check_entry_time will correctly report the
+report and patch by Jonathan Roudiere.
+
 ** API and ABI modifications:
 gnutls_x509_policy_release: Exported
 gnutls_pubkey_set_key_usage: Exported
