--- a/NEWS
+++ b/NEWS
@@ -11,7 +11,7 @@ DN and an LDAP description isn't present.
 ** libgnutls: When obtaining usage statistics for the random generator
 use system calls outside the mutex locks to prevent them from becoming bottleneck.
 
-** libgnutls: gnutls_db_check_entry_time will correctly report the
+** libgnutls: gnutls_db_check_entry_time will correctly report the time;
 report and patch by Jonathan Roudiere.
 
 ** API and ABI modifications:
