--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,10 @@ constructor. That is, gnutls_global_init() is no longer required
 unless linking with a static library or a system that does not
 support library constructors.
 
+** libgnutls: When generating DSA keys the macro GNUTLS_SUBGROUP_TO_BITS
+can be used to specify a particular subgroup as the number of bits in
+gnutls_privkey_generate; e.g., GNUTLS_SUBGROUP_TO_BITS(2048, 256).
+
 ** libgnutls: DH parameter generation is now delegated to nettle.
 
 ** libgnutls: Separated nonce RNG from the main RNG. The nonce
