--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ Copyright (C) 2000-2012 Free Software Foundation, Inc.
 Copyright (C) 2013 Nikos Mavrogiannopoulos
 See the end for copying conditions.
 
-* Version 3.2.10 (unreleased)
+* Version 3.2.10 (released 2014-01-31)
 
 ** libgnutls: fixed null pointer derefence when printing a certificate
 DN and an LDAP description isn't present.
