--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.1.20 (unreleased)
+* Version 3.1.20 (released 2014-01-31)
 
 ** libgnutls: fixed null pointer derefence when printing a certificate
 DN and an LDAP description isn't present.
