--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,17 @@ Copyright (C) 2000-2012 Free Software Foundation, Inc.
 Copyright (C) 2013 Nikos Mavrogiannopoulos
 See the end for copying conditions.
 
+* Version 3.2.11 (unreleased)
+
+** libgnutls: Tolerate servers that sent the SUPPORTED ECC extension.
+
+** libgnutls: Reduced the TLS and DTLS version requirements for all
+ciphersuites that are not GCM.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.2.10 (released 2014-01-31)
 
 ** libgnutls: fixed null pointer derefence when printing a certificate
