--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,17 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.1.21 (unreleased)
+
+** libgnutls: Tolerate servers that sent the SUPPORTED ECC extension.
+
+** libgnutls: Reduced the TLS and DTLS version requirements for all
+ciphersuites that are not GCM.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.1.20 (released 2014-01-31)
 
 ** libgnutls: fixed null pointer derefence when printing a certificate
