--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,8 @@ second as having the '+' modifier.
 it has been marked a trusted policy module in p11-kit.
 http://p11-glue.freedesktop.org/doc/p11-kit/pkcs11-conf.html
 
+** certtool: Added the --ask-pass option.
+
 ** API and ABI modifications:
 GNUTLS_PKCS11_TOKEN_TRUSTED_UINT: Added
 
