--- a/NEWS
+++ b/NEWS
@@ -18,7 +18,7 @@ it has been marked a trusted policy module in p11-kit.
 http://p11-glue.freedesktop.org/doc/p11-kit/pkcs11-conf.html
 
 ** libgnutls: Fixed bug that prevented the rejection of v1 intermediate
-CA certificates.
+CA certificates. Reported and investigated by Suman Jana.
 
 ** certtool: Added the --ask-pass option.
 
