--- a/NEWS
+++ b/NEWS
@@ -13,7 +13,7 @@ ciphersuites that are not GCM.
 second as having the '+' modifier.
 
 ** libgnutls: Fixed bug that prevented the rejection of v1 intermediate
-CA certificates.
+CA certificates. Reported and investigated by Suman Jana.
 
 ** API and ABI modifications:
 No changes since last version.
