--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ Copyright (C) 2000-2012 Free Software Foundation, Inc.
 Copyright (C) 2013 Nikos Mavrogiannopoulos
 See the end for copying conditions.
 
-* Version 3.2.11 (unreleased)
+* Version 3.2.11 (released 2014-02-13)
 
 ** libgnutls: Tolerate servers that send the SUPPORTED ECC extension.
 
