--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.1.21 (unreleased)
+* Version 3.1.21 (released 2014-02-13)
 
 ** libgnutls: Tolerate servers that sent the SUPPORTED ECC extension.
 
