--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,15 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.1.22 (unreleased)
+
+** libgnutls: Corrected issue in gnutls_pcert_list_import_x509_raw
+when provided with invalid data. Reported by Dmitriy Anisimkov.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.1.21 (released 2014-02-13)
 
 ** libgnutls: Tolerate servers that sent the SUPPORTED ECC extension.
