--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,16 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+Version 2.12.24 (unreleased)
+
+** libgnutls: Fix in TLS record decoding (GNUTLS-SA-2013-2)
+
+** libgnutls: Fix in certificate verification (GNUTLS-SA-2014-1)
+
+** API and ABI modifications:
+No changes since last version.
+
+
 Version 2.12.23 (released 2012-02-04)
 
 ** libgnutls: Eliminated memory leak in PCKS #11 initialization.
@@ -15,6 +25,7 @@ Issue reported by Kenny Patterson and Nadhem Alfardan.
 
 ** API and ABI modifications:
 No changes since last version.
+
 
 Version 2.12.22 (released 2013-01-05)
 
