--- a/NEWS
+++ b/NEWS
@@ -1,12 +1,15 @@
 GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
-Copyright (C) 2000-2012 Free Software Foundation, Inc.
-Copyright (C) 2013 Nikos Mavrogiannopoulos
+Copyright (C) 2000-2014 Free Software Foundation, Inc.
+Copyright (C) 2013, 2014 Nikos Mavrogiannopoulos
 See the end for copying conditions.
 
 * Version 3.2.12 (unreleased)
 
 ** libgnutls: Corrected issue in gnutls_pcert_list_import_x509_raw
 when provided with invalid data. Reported by Dmitriy Anisimkov.
+
+** libgnutls: Corrected timeout issue in subsequent to the first
+DTLS handshakes.
 
 ** API and ABI modifications:
 No changes since last version.
