--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
-Copyright (C) 2000-2012 Free Software Foundation, Inc.
-Copyright (C) 2013 Nikos Mavrogiannopoulos
+Copyright (C) 2000-2014 Free Software Foundation, Inc.
+Copyright (C) 2013, 2014 Nikos Mavrogiannopoulos
 See the end for copying conditions.
 
 * Version 3.3.0 (unreleased)
@@ -41,7 +41,7 @@ gnutls_privkey_generate; e.g., GNUTLS_SUBGROUP_TO_BITS(2048, 256).
 ** libgnutls: DH parameter generation is now delegated to nettle.
 
 ** libgnutls: Separated nonce RNG from the main RNG. The nonce
-random number generator is based on salsa20.
+random number generator is based on salsa20/12.
 
 ** libgnutls: The buffer alignment provided to crypto backend is
 enforced to be 16-byte aligned, when compiled with cryptodev
