--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@ when provided with invalid data. Reported by Dmitriy Anisimkov.
 ** libgnutls: Corrected timeout issue in subsequent to the first
 DTLS handshakes.
 
+** libgnutls: Removed unconditional not-trusted message in 
+gnutls_certificate_verification_status_print() when used with
+OpenPGP certificates. Reported by Michel Briand.
+
 ** API and ABI modifications:
 No changes since last version.
 
