--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,10 @@ DTLS handshakes.
 gnutls_certificate_verification_status_print() when used with
 OpenPGP certificates. Reported by Michel Briand.
 
+** libgnutls: All ciphersuites that were available in TLS1.0 or
+later are now made available in SSL3.0 or later to prevent
+any incompatibilities with servers that negotiate them in SSL 3.0.
+
 ** API and ABI modifications:
 No changes since last version.
 
