added release date

--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ Copyright (C) 2000-2014 Free Software Foundation, Inc.
 Copyright (C) 2013, 2014 Nikos Mavrogiannopoulos
 See the end for copying conditions.
 
-* Version 3.2.12 (unreleased)
+* Version 3.2.12 (released 2014-03-03)
 
 ** libgnutls: Corrected issue in gnutls_pcert_list_import_x509_raw
 when provided with invalid data. Reported by Dmitriy Anisimkov.
