updated option for TPM

--- a/doc/cha-library.texi
+++ b/doc/cha-library.texi
@@ -104,7 +104,7 @@ options are given.
 --disable-openssl-compatibility
 --disable-libdane
 --without-p11-kit
---with-tpm
+--without-tpm
 --disable-dtls-srtp-support
 @end verbatim
 
