--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,16 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.1.23 (unreleased)
+
+** libgnutls: Ciphersuites that use the SHA256 or SHA384 MACs are
+only available in TLS 1.0 as SSL 3.0 doesn't specify parameters for
+these algorithms.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.1.22 (released 2014-03-03)
 
 ** libgnutls: Corrected certificate verification issue (GNUTLS-SA-2014-2)
